--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ProfilePage</title>
-  <base href="https://github.com/AliRaza-commits/syedalirazajaffery.github.io.git">
+  <base href="https://aliraza-commits.github.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
